--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  width: 100vw;
+  
+}
+#root{
+  width: 800px;
 }
 
 code {
